End Of Section 10

--- a/ZwajApp-SPA/src/app/members/member-edit/member-edit.component.css
+++ b/ZwajApp-SPA/src/app/members/member-edit/member-edit.component.css
@@ -13,14 +13,14 @@
     border-top: none;
 }
 
-     .btn-primary:hover{
+     .btn-success:enabled:hover{
         text-decoration: none;
         color: black !important;
         background:pink !important;
         letter-spacing:0.5px;
         
       }
-      .btn-primary{
+      .btn-success{
         text-decoration: none;
         letter-spacing:0.5px;
         font-weight:bold;
@@ -44,7 +44,7 @@ strong,span{
     text-align: right;
  
 }
-h4{
+h4,textarea,label,input{
     letter-spacing:0.5px;
     font-weight:bolder;
     font-family:'JF Flat';
@@ -52,5 +52,12 @@ h4{
     margin-top: -2px;
     margin-bottom: 10px;
     text-align: right;
+
+}
+h1{
+    letter-spacing:0.5px;
+    font-weight:bolder;
+    font-family:'JF Flat';
+    font-size:2.5em;
 
 }
